--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Halil Çelik Aykent</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud"src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud"src="cloud.png" alt="cloud-img">
       <h1>I'm Halil.</h1>
       <h2> a web designer.</h2>
-      <img class="bottom-cloud"src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud"src="cloud.png" alt="cloud-img">
+      <img src="mountain.png" alt="mountain-img">
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img src="images/profile-circle.png" alt="profile-img">
+        <img src="profile-circle.png" alt="profile-img">
         <h2>Hello.</h2>
         <p class="intro">I am taking Web Development Bootcamp with Angela Yu. I love 🍕.</p>
       </div>
@@ -26,7 +26,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="computer" src="images/computer.png" alt="computer-img">
+          <img class="computer" src="computer.png" alt="computer-img">
           <h3>Computers</h3>
           <p class="compter-skill-description">I am using computers since 4 years old!</p>
         </div>
